k8s/src/resources/changedetection/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: changedetection
          image: dgtlmoon/changedetection.io:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: 5000-tcp
              containerPort: 5000
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "150m"
          volumeMounts:
            - name: changedetection-data
              mountPath: /datastore
          startupProbe:
            httpGet:
              path: /
              port: 5000
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: changedetection-data
          persistentVolumeClaim:
            claimName: changedetection-pvc
