k8s/src/resources/changedetection/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: changedetection.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: changedetection-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: changedetection-tls
      hosts:
        - changedetection.${NETWORK_HOSTNAME_SUFFIX}
